# robocup-off-robot-firmware

./: .gitmodules  README.md
AVR-based/: README.md
AVR-based/ballspeed_v2.0/: ballspeed_v2.0.ino
AVR-based/robot-Shell-Id-test/Multiplexer_test/: Multiplexer_test.ino
mBed-based/SolenoidWinder/: Stepper.cpp  Stepper.h  StepperMotor.cpp  main.cpp
mTrain-based/: CMakeLists.txt  DRVStepper.cpp  DRVStepper.hpp  README.md  makefile
mTrain-based/projects/template/: CMakeLists.txt
mTrain-based/projects/template/src/: main.cpp
